# landData

./: .gitignore  AGENTS.md  CLAUDE.MD  VA_shape.dbf  VA_shape.shx  app.R  index.htm  manifest.json  porpertySearch.csv  project-log.md
modern-app/: README.md
modern-app/backend/: pyproject.toml
modern-app/backend/app/: main.py
modern-app/backend/data/: README.md  properties.csv  properties.sample.csv
modern-app/backend/landdata_modern_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modern-app/backend/scripts/: convert_shapefile.py  fetch_properties.py
modern-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json
modern-app/frontend/src/: App.tsx  main.tsx  types.ts
modern-app/frontend/src/components/: MapView.tsx  PropertyGrid.tsx  PropertyTable.tsx  SelectedPropertiesList.tsx
modern-app/frontend/src/styles/: index.css
modern-app/scripts/: start-dev.sh
packrat/desc/: DBI  DT  KernSmooth  MASS  Matrix  RColorBrewer  Rcpp  bslib  class  classInt  cli  clipr  colorspace  commonmark  crayon  e1071  fansi  farver  fontawesome  generics  ggplot2  glue  htmltools  httpuv  jsonlite  lattice  leaflet  lifecycle  magrittr  mgcv  nlme  pillar  proxy  ragg  raster  rlang  s2  sass  scales  sf  (+14 more)
